Join table added

--- a/app/views/contaminationstatuses/_form.html.erb
+++ b/app/views/contaminationstatuses/_form.html.erb
@@ -55,6 +55,10 @@
     <%= f.label :user_id %><br>
     <%= f.number_field :user_id %>
   </div>
+    <div class="field">
+    <%= f.label :result_id %><br>
+    <%= f.number_field :result_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
