--- a/app/views/samplepreparations/_form.html.erb
+++ b/app/views/samplepreparations/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+
+<div class="well">          
+  <div class="panel panel-info">
+    <div class="panel-body">
+
   <div class="field">
     <%= f.label :samprep_short_name %><br>
     <%= f.text_field :samprep_short_name %>
@@ -103,7 +108,13 @@
     <%= f.label :user_id %><br>
     <%= f.number_field :user_id %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  
+    </div>
   </div>
-<% end %>
+  <div class="actions">
+    <%= f.submit 'Save Samplepreparation', class: "btn btn-success" %> | | 
+    <%= link_to 'Cancel', samplepreparations_path, class: "btn btn-danger" %>
+  </div>
+  <% end %>
+</div>
+
