--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -2,7 +2,7 @@
   <div class="row carousel-holder">
     <div class="col-md-12">
 
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
         <div class="carousel-inner">
           <div class="item active" align="center">
@@ -21,15 +21,15 @@
 
         
         <ol class="carousel-indicators" id="center">
-          <li class="active" data-slide-to="0" data-target="#carousel-example-generic"></li>
-          <li class="" data-slide-to="1" data-target="#carousel-example-generic"></li>
-          <li class="" data-slide-to="2" data-target="#carousel-example-generic"></li>
-          <li class="" data-slide-to="2" data-target="#carousel-example-generic"></li>
+          <li class="active" data-slide-to="0" data-target="#myCarousel"></li>
+          <li class="" data-slide-to="1" data-target="#myCarousel"></li>
+          <li class="" data-slide-to="2" data-target="#myCarousel"></li>
+          <li class="" data-slide-to="2" data-target="#myCarousel"></li>
         </ol>
         
 
-        <a class="left carousel-control" data-slide="prev" href="#carousel-example-generic" ><span id="center" class="icon-prev"></span></a>
-        <a class="right carousel-control" data-slide="next" href="#carousel-example-generic"><span id="center" class="icon-next"></span></a>               
+        <a class="left carousel-control" data-slide="prev" href="#myCarousel" ><span id="center" class="icon-prev"></span></a>
+        <a class="right carousel-control" data-slide="next" href="#myCarousel"><span id="center" class="icon-next"></span></a>               
       </div>
     </div>
   </div>
