--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -15,10 +15,10 @@
       </div>     
 
       <div class="col-md-9" id="rightCol"> 
-        
-            <%= render 'tableagents' %>
+        <%= render 'tableagents' %> <br>
+        <%= link_to 'New Agent', new_agent_path, class: "btn btn-success " %>
       </div>
-      
+
     </div>
   </div>
 </div>
