--- a/app/views/detections/_tabledetections.html.erb
+++ b/app/views/detections/_tabledetections.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
   
 		<thead>
@@ -67,9 +67,5 @@
 		    <% end %>
 		  </tbody>
 		</table>
-
-		<br>
-
-		<%= link_to 'New Detection', new_detection_path, class: "btn btn-success"  %>
-
+		
 </div>
