--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -28,8 +28,13 @@
         </ol>
         
 
-        <a class="left carousel-control" data-slide="prev" href="#myCarousel" ><span id="center" class="icon-prev"></span></a>
-        <a class="right carousel-control" data-slide="next" href="#myCarousel"><span id="center" class="icon-next"></span></a>               
+
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="icon-prev"></span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="icon-next"></span>
+          </a>              
       </div>
     </div>
   </div>
