--- a/app/views/agents/_tableagents.html.erb
+++ b/app/views/agents/_tableagents.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
 	  <thead>
 	    <tr>
@@ -48,10 +48,6 @@
 	    <% end %>
 	  </tbody>
 	</table>
-
-	<br>
-
-	<%= link_to 'New Agent', new_agent_path, class: "btn btn-success " %>
 
 </div>
 
