--- a/app/views/contaminationstatuses/_tablecontaminationstatus.html.erb
+++ b/app/views/contaminationstatuses/_tablecontaminationstatus.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
       <tr>
@@ -38,9 +38,5 @@
       <% end %>
     </tbody>
   </table>
-
-  <br>
-
-  <%= link_to 'New Contaminationstatus', new_contaminationstatus_path, class: "btn btn-success" %>
 
 </div>
