--- a/app/views/contaminationstatuses/index.html.erb
+++ b/app/views/contaminationstatuses/index.html.erb
@@ -15,9 +15,10 @@
       </div>     
 
       <div class="col-md-9" id="rightCol"> 
-        
-            <%= render 'tablecontaminationstatus' %>
+        <%= render 'tablecontaminationstatus' %> <br>
+        <%= link_to 'New Contaminationstatus', new_contaminationstatus_path, class: "btn btn-success" %>
       </div>
+      
     </div>
   </div>
 </div>
