--- a/app/views/references/_tablereferences.html.erb
+++ b/app/views/references/_tablereferences.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
 	    <tr>
@@ -52,9 +52,5 @@
 	    <% end %>
 	  </tbody>
 	</table>
-
-	<br>
-
-	<%= link_to 'New Reference', new_reference_path, class: "btn btn-success"  %>
 
 </div>
