--- a/app/views/results/_tableresults.html.erb
+++ b/app/views/results/_tableresults.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
 	    <tr>
@@ -28,10 +28,5 @@
 	    <% end %>
 	  </tbody>
 	</table>
-
-	<br>
-
-	<%= link_to 'New Result', new_result_path, class: "btn btn-success"  %>
-  
 
 </div>
