--- a/app/views/samplepreparations/_tablesamplepreps.html.erb
+++ b/app/views/samplepreparations/_tablesamplepreps.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
 	    <tr>
@@ -62,9 +62,5 @@
 	    <% end %>
 	  </tbody>
 	</table>
-
-	<br>
-
-	<%= link_to 'New Samplepreparation', new_samplepreparation_path, class: "btn btn-success"  %>
 
 </div>
