--- a/app/views/samplepreparations/index.html.erb
+++ b/app/views/samplepreparations/index.html.erb
@@ -14,10 +14,12 @@
         </div>
       </div>     
 
-      <div class="col-md-9" id="rightCol"> 
-        
-            <%= render 'tablesamplepreps' %>
+      <div class="col-md-9" id="rightCol">     
+        <%= render 'tablesamplepreps' %>
+        <br>
+        <%= link_to 'New Samplepreparation', new_samplepreparation_path, class: "btn btn-success"  %>
       </div>
+      
     </div>
   </div>
 </div>
