--- a/app/views/spikings/_tablespikings.html.erb
+++ b/app/views/spikings/_tablespikings.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
 	    <tr>
@@ -32,10 +32,5 @@
 	    <% end %>
 	  </tbody>
 	</table>
-
-	<br>
-
-	<%= link_to 'New Spiking', new_spiking_path, class: "btn btn-success"  %>	
-  
 
 </div>
