--- a/app/views/tenacities/_tabletenacities.html.erb
+++ b/app/views/tenacities/_tabletenacities.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
 	    <tr>
@@ -25,11 +25,6 @@
 	      </tr>
 	    <% end %>
 	  </tbody>
-	</table>
-
-	<br>
-
-	<%= link_to 'New Tenacity', new_tenacity_path, class: "btn btn-success"  %>
-  
+	</table> 
 
 </div>
