--- a/app/views/treatments/_tabletreatments.html.erb
+++ b/app/views/treatments/_tabletreatments.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive table-scrollable">
   <table class="table table-striped table-bordered table-hover ">
     
       <thead>
@@ -60,7 +60,4 @@
       </tbody>
     </table>
 
-    <br>
-
-    <%= link_to 'New Treatment', new_treatment_path, class: "btn btn-success"  %>
 </div>
