--- a/app/views/contaminationstatuses/show.html.erb
+++ b/app/views/contaminationstatuses/show.html.erb
@@ -73,7 +73,7 @@
 
               <p>
                 <strong>Reference:</strong>
-                <%= @contaminationstatus.reference.year %>
+                <%= @contaminationstatus.reference.year if @contaminationstatus.reference %>
               </p>
 
               <p>
