--- a/app/views/contaminationstatuses/_form.html.erb
+++ b/app/views/contaminationstatuses/_form.html.erb
@@ -18,51 +18,52 @@
 
       <div class="field">
         <%= f.label :cfu_natural_contamination %><br>
-        <%= f.text_field :cfu_natural_contamination %>
+        <%= f.text_field :cfu_natural_contamination, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :cfu_natural_contamination_unit %><br>
-        <%= f.text_field :cfu_natural_contamination_unit %>
+        <%= radio_button_tag :cfu_natural_contamination_unit, "CfU/Gramm"  %> <%= f.label :cfu_natural_contamination_unit, "CfU/Gramm" %>
+        <%= radio_button_tag :cfu_natural_contamination_unit, "CfU/Milliliter"  %> <%= f.label :cfu_natural_contamination_unit, "CfU/Milliliter" %>
       </div>
       <div class="field">
         <%= f.label :matrix_id %><br>
-        <%= f.number_field :matrix_id %>
+        <%= f.select :matrix_id, Matrix.all.order(:id).collect {|c| [ [c.id], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.matrix_id}, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :agent_id %><br>
-        <%= f.number_field :agent_id %>
+        <%= f.select :agent_id, Agent.all.order(:id).collect {|c| [ [c.id], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.agent_id}, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :tenacity_id %><br>
-        <%= f.number_field :tenacity_id %>
+        <%= f.select :tenacity_id, Tenacity.all.order(:id).collect {|c| [ [c.id], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.tenacity_id}, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :treatment_id %><br>
-        <%= f.number_field :treatment_id %>
+        <%= f.select :treatment_id, Treatment.all.order(:id).collect {|c| [ [c.id], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.treatment_id}, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :spiking_id %><br>
-        <%= f.number_field :spiking_id %>
+        <%= f.select :spiking_id, Spiking.all.order(:id).collect {|c| [ [c.id], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.spiking_id}, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :samplepreparation_id %><br>
-        <%= f.number_field :samplepreparation_id %>
+        <%= f.select :samplepreparation_id, Samplepreparation.all.order(:id).collect {|c| [ [c.id], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.samplepreparation_id}, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :detection_id %><br>
-        <%= f.number_field :detection_id %>
+        <%= f.select :detection_id, Detection.all.order(:id).collect {|c| [ [c.id], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.detection_id}, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :reference_id %><br>
-        <%= f.number_field :reference_id %>
+        <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ [c.first_author_name, c.year, c.title], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.reference_id}, class: "form-control" %>
       </div>
       <div class="field">
         <%= f.label :user_id %><br>
-        <%= f.number_field :user_id %>
+        <%= f.number_field :user_id, class: "form-control"  %>
       </div>
         <div class="field">
         <%= f.label :result_id %><br>
-        <%= f.number_field :result_id %>
+        <%= f.select :result_id, Result.all.order(:id).collect {|c| [ [c.id], c.id ] }, { :include_blank => true, :selected => @contaminationstatus.result_id}, class: "form-control" %>
       </div>
 
 
