--- a/app/views/samplepreparations/_form.html.erb
+++ b/app/views/samplepreparations/_form.html.erb
@@ -18,95 +18,110 @@
 
   <div class="field">
     <%= f.label :samprep_short_name %><br>
-    <%= f.text_field :samprep_short_name %>
+    <%= f.text_field :samprep_short_name, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :samprep_long_name %><br>
-    <%= f.text_area :samprep_long_name %>
+    <%= f.text_area :samprep_long_name, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :samprep_method_validated_for_condiments %><br>
-    <%= f.text_field :samprep_method_validated_for_condiments %>
+    <%= radio_button_tag :samprep_method_validated_for_condiments, "Yes"  %> <%= f.label :samprep_method_validated_for_condiments, "Yes" %>
+    <%= radio_button_tag :samprep_method_validated_for_condiments, "No"  %> <%= f.label :samprep_method_validated_for_condiments, "No" %>
+    <%= radio_button_tag :samprep_method_validated_for_condiments, "Unknown"  %> <%= f.label :samprep_method_validated_for_condiments, "Unknown" %> 
   </div>
   <div class="field">
     <%= f.label :samprep_process_description %><br>
-    <%= f.text_area :samprep_process_description %>
+    <%= f.text_area :samprep_process_description, class: "form-control" %>
   </div>
   <div class="field">
-    <%= f.label :spik_weight_of_sample %><br>
-    <%= f.text_field :spik_weight_of_sample %>
+    <%= f.label :"spiking_weight_of_sample" %><br>
+    <%= f.text_field :spik_weight_of_sample, class: "form-control" %>
   </div>
   <div class="field">
-    <%= f.label :spik_weight_of_sample_unit %><br>
-    <%= f.text_field :spik_weight_of_sample_unit %>
+    <%= f.label :"spiking_weight_of_sample_unit" %><br>
+    <%= radio_button_tag :spik_weight_of_sample_unit, "Milligramm"  %> <%= f.label :spik_weight_of_sample_unit, "Milligramm" %>
+    <%= radio_button_tag :spik_weight_of_sample_unit, "Gramm"  %> <%= f.label :spik_weight_of_sample_unit, "Gramm" %>
+    <%= radio_button_tag :spik_weight_of_sample_unit, "Kilogramm"  %> <%= f.label :spik_weight_of_sample_unit, "Kilogramm" %> 
   </div>
   <div class="field">
-    <%= f.label :dilution_fuid %><br>
-    <%= f.text_field :dilution_fuid %>
+    <%= f.label :"Dilution fluid" %><br>
+    <%= f.text_field :dilution_fuid, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :first_dilution_ratio %><br>
-    <%= f.text_field :first_dilution_ratio %>
+    <%= f.text_field :first_dilution_ratio, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :homogenize_with %><br>
-    <%= f.text_field :homogenize_with %>
+    <%= f.text_field :homogenize_with, class: "form-control" %>
+  </div>
+  <div class ="well">
+    <div class="field">
+      <%= f.label :enrichment %><br>
+      <%= radio_button_tag :enrichment, "Yes"  %> <%= f.label :enrichment, "Yes" %>
+      <%= radio_button_tag :enrichment, "No"  %> <%= f.label :enrichment, "No" %>
+      <%= radio_button_tag :enrichment, "Other"  %> <%= f.label :enrichment, "Other" %> 
+    </div>
+    <div class="field">
+      <%= f.label :"DNA extraction" %><br>
+      <%= radio_button_tag :dna_extraction, "Yes"  %> <%= f.label :dna_extraction, "Yes" %>
+      <%= radio_button_tag :dna_extraction, "No"  %> <%= f.label :dna_extraction, "No" %>
+      <%= radio_button_tag :dna_extraction, "Other"  %> <%= f.label :dna_extraction, "Other" %>
+    </div>
+    <div class="field">
+      <%= f.label :"RNA extraction" %><br>
+      <%= radio_button_tag :rna_extraction, "Yes"  %> <%= f.label :rna_extraction, "Yes" %>
+      <%= radio_button_tag :rna_extraction, "No"  %> <%= f.label :rna_extraction, "No" %>
+      <%= radio_button_tag :rna_extraction, "Other"  %> <%= f.label :rna_extraction, "Other" %>
+    </div>
+    <div class="field">
+      <%= f.label :protein_extraction %><br>
+      <%= radio_button_tag :protein_extraction, "Yes"  %> <%= f.label :protein_extraction, "Yes" %>
+      <%= radio_button_tag :protein_extraction, "No"  %> <%= f.label :protein_extraction, "No" %>
+      <%= radio_button_tag :protein_extraction, "Other"  %> <%= f.label :protein_extraction, "Other" %>
+    </div>
+    <div class="field">
+      <%= f.label :homogenizing_method %><br>
+      <%= radio_button_tag :homogenizing_method, "Yes"  %> <%= f.label :homogenizing_method, "Yes" %>
+      <%= radio_button_tag :homogenizing_method, "No"  %> <%= f.label :homogenizing_method, "No" %>
+      <%= radio_button_tag :homogenizing_method, "Other"  %> <%= f.label :homogenizing_method, "Other" %>
+    </div>
+    <div class="field">
+      <%= f.label :cell_lysis %><br>
+      <%= f.text_field :cell_lysis, :placeholder=>"e.g. heat, detergent,...", class: "form-control"  %>
+    </div>
+    <div class="field">
+      <%= f.label :applied_kit %><br>
+      <%= f.text_field :applied_kit, class: "form-control" %>
+    </div>
+    <div class="field">
+      <%= f.label :other_samprep_method_type %><br>
+      <%= f.text_field :other_samprep_method_type, class: "form-control" %>
+    </div>
+    <div class="field">
+      <%= f.label :samprep_method_type_details_text %><br>
+      <%= f.text_field :samprep_method_type_details_text, class: "form-control" %>
+    </div>
   </div>
   <div class="field">
-    <%= f.label :enrichment %><br>
-    <%= f.text_field :enrichment %>
-  </div>
-  <div class="field">
-    <%= f.label :dna_extraction %><br>
-    <%= f.text_field :dna_extraction %>
-  </div>
-  <div class="field">
-    <%= f.label :rna_extraction %><br>
-    <%= f.text_field :rna_extraction %>
-  </div>
-  <div class="field">
-    <%= f.label :protein_extraction %><br>
-    <%= f.text_field :protein_extraction %>
-  </div>
-  <div class="field">
-    <%= f.label :homogenizing_method %><br>
-    <%= f.text_field :homogenizing_method %>
-  </div>
-  <div class="field">
-    <%= f.label :cell_lysis %><br>
-    <%= f.text_field :cell_lysis %>
-  </div>
-  <div class="field">
-    <%= f.label :applied_kit %><br>
-    <%= f.text_field :applied_kit %>
-  </div>
-  <div class="field">
-    <%= f.label :other_samprep_method_type %><br>
-    <%= f.text_field :other_samprep_method_type %>
-  </div>
-  <div class="field">
-    <%= f.label :samprep_method_type_details_text %><br>
-    <%= f.text_field :samprep_method_type_details_text %>
-  </div>
-  <div class="field">
-    <%= f.label :samprep_duration %><br>
-    <%= f.text_field :samprep_duration %>
-  </div>
-  <div class="field">
-    <%= f.label :samprep_duration_unit %><br>
-    <%= f.text_field :samprep_duration_unit %>
+    <%= f.label :"Sample preparation duration" %><br>
+    <%= radio_button_tag :samprep_duration_unit, "seconds"  %> <%= f.label :samprep_duration_unit, "seconds" %>
+    <%= radio_button_tag :samprep_duration_unit, "minutes"  %> <%= f.label :samprep_duration_unit, "mminutes" %>
+    <%= radio_button_tag :samprep_duration_unit, "hours"  %> <%= f.label :samprep_duration_unit, "hours" %> <br>
+    <%= f.text_field :samprep_duration, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :samprep_comment %><br>
-    <%= f.text_area :samprep_comment %>
+    <%= f.text_area :samprep_comment, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :reference_id %><br>
-    <%= f.number_field :reference_id %>
+    <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ [c.first_author_name, c.year, c.title], c.id ] }, { :include_blank => true, :selected => @samplepreparation.reference_id}, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.number_field :user_id, class: "form-control" %>
   </div>
   
     </div>
